testing/stage_12/valid/char_int_max.c
int main() {
	int a=10;
	char c=7;
	int b=4;
	char d=3;
	return a+b+c+d;
}

