testing/stage_12/invalid/bad_char_constant.c
int main()
{
	char c ='h;
	return 0;
}